@@ -19,8 +19,8 @@
  *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
-#ifndef __TICONV_EXPORT__
-#define __TICONV_EXPORT__
+#ifndef __TICABLES_EXPORT__
+#define __TICABLES_EXPORT__
 
 #ifdef HAVE_CONFIG_H
 #  include <config.h>
@@ -39,33 +39,33 @@ extern "C" {
 	Symbols exporting 
 */
 #if defined(HAVE_FVISIBILITY)	// GCC 4.0 has introduced the -fvisibility flag (similar to declspec)
-# define TIEXPORT __attribute__ ((visibility("default")))
+# define TIEXPORT1	__attribute__ ((visibility("default")))
 
 #elif defined(__WIN32__)
 # if defined(__BORLANDC__)		// BCC32 v5.x (or C++Builder)
 #  if __BORLANDC__ >= 0x0500	// (c) 2001 Thomas Wolf (two@chello.at)
-#   define TIEXPORT
+#   define TIEXPORT1
 #  else
-#   define TIEXPORT
+#   define TIEXPORT1
 #  endif
 
 # elif defined(_MSC_VER)		// MSVC 5.0 mini
-#  if defined(DLL_EXPORT) || defined(TICABLES_EXPORTS) || defined(TIFILES_EXPORTS) || defined(TICALCS_EXPORTS) || defined(TICONV_EXPORTS)
-#   define TIEXPORT	__declspec(dllexport)
+#  if defined(TICABLES_EXPORTS)
+#   define TIEXPORT1 __declspec(dllexport)
 #  else
-#   define TIEXPORT __declspec(dllimport)
+#   define TIEXPORT1 __declspec(dllimport)
 #  endif
 
 # elif defined(__MINGW32__)		// MinGW - GCC for Windows, (c) 2002 Kevin Kofler
-#  if defined(DLL_EXPORT)		// defined by the configure script
-#   define TIEXPORT	__declspec(dllexport)
+#  if defined(TICABLES_EXPORTS)	// defined by the configure script
+#   define TIEXPORT1 __declspec(dllexport)
 #  else
-#   define TIEXPORT __declspec(dllimport)
+#   define TIEXPORT1 __declspec(dllimport)
 #  endif
 # endif
 
 #else
-# define TIEXPORT				// default
+# define TIEXPORT1				// default
 #endif
 
 #ifdef __cplusplus
